# GasConsoleTodo

./: .gitignore  CMakeLists.txt  README.md
doc/: project.drawio  todo.txt  tz.txt
src/cpp/main/: main.cpp
src/cpp/main/gas/: Command.cpp  Command.hpp  DefaultTaskList.cpp  DefaultTaskList.hpp  Drawable.cpp  Drawable.hpp  HelpCommand.cpp  LoggingObs.cpp  LoggingObs.hpp  ObservableTaskList.cpp  ObservableTaskList.hpp  Observer.cpp  Observer.hpp  SafeTaskList.cpp  SafeTaskList.hpp  State.cpp  State.hpp  Task.cpp  Task.hpp  TaskList.cpp  TaskList.hpp  TaskListDecorator.cpp  TaskListDecorator.hpp  help_command.cpp  help_command.hpp
src/cpp/main/gas/states/: DelayedState.cpp  DelayedState.hpp  DoneState.cpp  DoneState.hpp  NewState.cpp  NewState.hpp
